--- a/main.html
+++ b/main.html
@@ -1,1 +1,108 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+
+
+    <div class="container">
+        <div class="left">
+            <div class="head">
+                <img src="https://avatars.githubusercontent.com/u/113281464?v=4" alt="">
+                <ul>
+                    <li><b>Name:</b> Mohammad Shahzeb</li>
+                    <li><b>Profile</b> Software Developer</li>
+                    <li><b>Email:</b>shahzeb0012@gmail.com</li>
+                </ul>
+            </div>
+            <h3>Skills</h3>
+            <div class="skills">
+
+                <div class="skills-box">
+                    <div class="skills-box-top">
+                        <div class="skills-icons">
+                            <p>React</p><i style="color: lightblue;" class="fa-brands fa-react"></i>
+                            <p>CSS</p><i style="color: blue;" class="fa-brands fa-css3-alt"></i>
+                            <p>JAVASCRIPT</p><i style="color: yellow;" class="fa-brands fa-js"></i>
+                        </div>
+                        <div class="skills-percentage">90%</div>
+                    </div>
+                    <div class="skills-line">
+                        <div class="inner-line-1"></div>
+                    </div>
+                </div>
+
+                <div class="skills-box">
+                    <div class="skills-box-top">
+                        <div class="skills-icons">
+                            <p>NODEJS</p><i style="color: green;" class="fa-brands fa-node-js"></i>
+                            <p>MONGODB</p><i style="color: greenyellow;" class="fa-brands fa-node-js"></i>
+                        </div>
+                        <div class="skills-percentage">95%</div>
+                    </div>
+                    <div class="skills-line">
+                        <div class="inner-line-2"></div>
+                    </div>
+                </div>
+                <div class="skills-box">
+                    <div class="skills-box-top">
+                        <div class="skills-icons">
+
+                            <p>C/C++</p><i style="color: blue;" class="fa-brands fa-python"></i>
+                            <p>PYTHON</p><i style="color: yellow;" class="fa-brands fa-python"></i>
+                            <P>BATCH</P><i style="color: black;" class="fa-brands fa-python"></i>
+                        </div>
+                        <div class="skills-percentage">99%</div>
+                    </div>
+                    <div class="skills-line">
+                        <div class="inner-line-3"></div>
+                    </div>
+                </div>
+                <div class="skills-box">
+                    <div class="skills-box-top">
+                        <div class="skills-icons">
+
+                            <p>AWS</p><i style="color: yellow;" class="fa-brands fa-aws"></i>
+                            <P>HADOOP</P><i class="fa-brands fa-aws"></i>
+                        </div>
+                        <div class="skills-percentage">93%</div>
+                    </div>
+                    <div class="skills-line">
+                        <div class="inner-line-4"></div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
+        <div class="right">
+            <div class="right-head">
+                <h2>About Me</h2>
+                <hr id="horizental">
+            </div>
+            <div class="right-para">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus rem laboriosam sapiente ut, rerum porro facere tenetur fugit. Fugit eligendi et aliquid aliquam mollitia quibusdam quam maxime dolore omnis veritatis.</p>
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas atque debitis ullam harum maiores vitae voluptatum, eum provident voluptatibus distinctio tempore! Hic quae natus sapiente perferendis libero, fuga odio molestias?</p>
+                <br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore, similique quidem debitis deleniti pariatur nobis dolorem ducimus accusamus. Quis reiciendis repellendus aspernatur minus animi sint culpa voluptates voluptatum labore perferendis.</p>
+            </div>
+        </div>
+    </div>
+
+
+
+
+</body>
+
+</html>
