--- a/main.html
+++ b/main.html
@@ -87,7 +87,7 @@
 
         <div class="right">
             <div class="right-head">
-                <h2>About Me</h2>
+                <h2 class="About-me">About me</h2>
                 <hr id="horizental">
             </div>
             <div class="right-para">
